css/index.css
:root {
    --lyrene-main-bg: #1e242b;
    --lyrene-img-bg: #3d4650;
    --lyrene-dot-1: #FF9FB2;
    --lyrene-dot-2: #567e8a;
    --lyrene-dot-3: #A89F68;
    --lyrene-dot-4: #80637d;
    --lyrene-dot-5: #68676f;
    --lyrene-mp: 10px;
}
html {
    position: fixed;
    top: 0;
    bottom: 0;
    width: 100%;
    overflow-x: hidden;
}
body {
    height: 100%;
    font-family: -apple-system, BlinkMacSystemFont, Verdana, "Microsoft JhengHei", sans-serif;
    background-color: var(--lyrene-main-bg, #1e242b);
}
#index {
    height: 100%;
    overflow-y: auto;
}
.index-container,
.about-container {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: var(--flex, flex);
    -webkit-flex-flow: row;
    -ms-flex-flow: row;
    flex-flow: row;
    background-color: var(--lyrene-main-bg, #1e242b);
    width: 100%;
    height: var(--vh, 100vh); /* defined after calc */
    overflow: hidden;
}
.about-container {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    height: 100%;
    background-color: var(--lyrene-img-bg, #3d4650);
    overflow-y: auto;
}
/* GROUP: header */
    .header {
        position: fixed;
        z-index: 99;
        width: 100%;
        height: 65px;
        padding: var(--lyrene-mp, 10px);
        text-align: center;
        background-color: var(--lyrene-main-bg, #1e242b);
        opacity: .8;
        -webkit-transform: translateZ(0);
        transform: translateZ(0);
        display: none; /* display on mobile | scrolling */
    }
    .header>img {
        width: auto;
        height: 45px;
        filter: invert(1);
    }
/* GROUP: left */
    .index-left {
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-flex: 1;
        flex: 1;
        justify-content: center;
        padding: 0 var(--lyrene-mp, 10px);
    }
    .index-left .left-child {
        position: relative;
        z-index: 0;
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-flex: 1;
        flex: 1;
        -webkit-flex-flow: column;
        -ms-flex-flow: column;
        flex-flow: column;
        justify-content: center;
        /* box */
        margin: 0 var(--lyrene-mp, 10px);
        background-size: 10px 10px;
        background-repeat: repeat;
        max-width: 250px;
        height: 80%;
        /* font */
        color: var(--lyrene-main-bg, #1e242b);
        text-align: center;
        font-size: 3vw;
        font-weight: bold;
        -webkit-writing-mode: vertical-lr;
        writing-mode: vertical-lr;
        letter-spacing: 10px;
        /* others */
        overflow: hidden;
        -webkit-user-select: none;
        -moz-user-select: none;
        cursor: pointer;
        transition: all 300ms;
    }
    .index-left .left-child:active {
        height: 100%;
        letter-spacing: 15px;
    }
    .index-left .left-child:active::after {
        display: none;
    }
    .index-left .left-child:nth-child(odd) {
        align-items: flex-start;
        align-self: flex-start;
        text-align: left;
        transform: translateY(-100vh);
    }
    .index-left .left-child:nth-child(even) {
        align-items: flex-end;
        align-self: flex-end;
        text-align: right;
        transform: translateY(100vh);
    }
    .left-child :nth-child(n) {
        height: 100%;
        background-color: rgba(255, 255, 255, .75);
    }
    .left-child:nth-child(odd) :nth-child(n) {
        padding-top: 2rem;
    }
    .left-child:nth-child(even) :nth-child(n) {
        padding-bottom: 2rem;
    }
    .index-left .left-child::after {
        content: "";
        position: absolute;
        z-index: 1;
    }
    .index-left .left-child:nth-child(1) {
        background-image: linear-gradient(-45deg, var(--lyrene-dot-1, #FF9FB2) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-1, #FF9FB2) 50%, var(--lyrene-dot-1, #FF9FB2) 75%, transparent 75%, transparent);
        opacity: var(--opacity-1, 0);
    }
    .index-left .left-child:nth-child(1):hover,
    .index-left .left-child:nth-child(1):active {
        opacity: 1 !important;
    }
    .index-left .left-child:nth-child(2) {
        background-image: linear-gradient(-45deg, var(--lyrene-dot-2, #567e8a) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-2, #567e8a) 50%, var(--lyrene-dot-2, #567e8a) 75%, transparent 75%, transparent);
        opacity: var(--opacity-2, 0);
    }
    .index-left .left-child:nth-child(2):hover,
    .index-left .left-child:nth-child(2):active {
        opacity: 1 !important;
    }
    .index-left .left-child:nth-child(3) {
        background-image: linear-gradient(-45deg, var(--lyrene-dot-3, #A89F68) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-3, #A89F68) 50%, var(--lyrene-dot-3, #A89F68) 75%, transparent 75%, transparent);
        opacity: var(--opacity-3, 0);
    }
    .index-left .left-child:nth-child(3):hover,
    .index-left .left-child:nth-child(3):active {
        opacity: 1 !important;
    }
    .index-left .left-child:nth-child(4) {
        background-image: linear-gradient(-45deg, var(--lyrene-dot-4, #80637d) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-4, #80637d) 50%, var(--lyrene-dot-4, #80637d) 75%, transparent 75%, transparent);
        opacity: var(--opacity-4, 0);
    }
    .index-left .left-child:nth-child(4):hover,
    .index-left .left-child:nth-child(4):active {
        opacity: 1 !important;
    }
    .main-btn-1::after {
        bottom: 0;
        left: 0;
        border-color: transparent var(--lyrene-main-bg, #FF9FB2) transparent transparent;
        border-style: solid solid solid solid;
        border-width: 150px 250px 0 0;
        width: 250px;
    }
    .main-btn-2::after {
        top: 0;
        left: 0;
        border-color: var(--lyrene-main-bg, #FF9FB2) transparent transparent transparent;
        border-style: solid solid solid solid;
        border-width: 150px 250px 0 0;
        width: 250px;
    }
    .main-btn-3::after {
        bottom: 0;
        left: 0;
        border-color: transparent transparent var(--lyrene-main-bg, #FF9FB2) transparent;
        border-style: solid solid solid solid;
        border-width: 0 250px 150px 0;
        width: 250px;
    }
    .main-btn-4::after {
        top: 0;
        left: 0;
        border-color: transparent var(--lyrene-main-bg, #FF9FB2) transparent transparent;
        border-style: solid solid solid solid;
        border-width: 0 250px 150px 0;
        width: 250px;
    }
    .left-child .btn-t-en {
        font-size: 1.5vw;
        letter-spacing: 5px;
        transition: all 300ms;
    }
    .left-child:active .btn-t-en {
        letter-spacing: 10px;
    }
/* GROUP: right */
    .index-right {
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-flex-flow: column;
        -ms-flex-flow: column;
        flex-flow: column;
        -webkit-box-flex: none;
        flex: none;
        padding: 1rem;
        padding-left: 0;
        background-image: url("../img/loading.svg");
        background-size: 50px 50px;
        background-position: center;
        background-repeat: no-repeat;
        width: 30%;
        min-width: 300px;
        transform: translateY(-100vh);
        transition: all 1s;
    }
    .title-container {
        width: 100%;
        padding: 1rem;
    }
    .title-container>img {
        width: 100%;
        height: auto;
        filter: invert(1);
    }
    .swiper-container {
        position: relative;
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: var(--lyrene-img-bg);
        width: 100%;
        height: 100%;
        text-align: center;
        overflow: hidden;
    }
    .swiper-container::before {
        content: "";
        position: absolute;
        z-index: 1;
        top: 5px;
        left: 5px;
        width: calc(100% - 10px);
        height: calc(100% - 10px);
        border: solid 3px var(--lyrene-main-bg);
    }
    .swiper-container>img {
        position: absolute;
        top: 0;
        margin: auto;
        width: auto;
        height: 100%;
    }
/* GROUP: dot */
    .index-img-page-dot {
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-flex-flow: column;
        -ms-flex-flow: column;
        flex-flow: column;
        -webkit-box-flex: none;
        flex: none;
        width: 15px;
    }
    .index-img-page-dot :nth-child(n) {
        -webkit-box-flex: 1;
        flex: 1;
        width: 100%;
        cursor: pointer;
        transition: all 300ms;
    }
    .page-dot-chosen {
        background-image: linear-gradient(-45deg, white 25%, transparent 25%, transparent 50%, white 50%, white 75%, transparent 75%, transparent);
        background-size: 5px 5px;
        background-repeat: repeat;
        box-shadow: inset 0 0 0 2px white;
    }
/* GROUP: others */
    .swiper-container .error-img {
        width: 50px;
        height: 50px;
        top: calc(50% - 25px);
    }

@media screen and (min-width: 1201px) {
    .index-left .left-child {
        font-size: 2.5vw;
    }
    .left-child .btn-t-en {
        font-size: 1vw;
    }
}
@media screen and (min-width: 1441px) {
    .index-left .left-child {
        font-size: 2vw;
    }
}

